findings/findings/MATH-1089/Dynamoth/stdout.txt
03:33:56.265 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Source files: [/apiarty/data/MATH-1089/commons-math/src/main/java, /apiarty/data/MATH-1089/commons-math/src/test/java]
03:33:56.281 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Classpath: [file:/apiarty/data/MATH-1089/commons-math/target/classes/, file:/apiarty/data/MATH-1089/commons-math/target/test-classes/, file:/root/.m2/repository/junit/junit/4.11/junit-4.11.jar, file:/root/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar]
03:33:56.282 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Statement type: PRE_THEN_COND
03:33:56.283 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Args: [org.apache.commons.math3.util.PrecisionTest]
03:33:56.287 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Config: Config{synthesisDepth=3, collectStaticMethods=true, collectStaticFields=false, collectLiterals=false, onlyOneSynthesisResult=true, sortExpressions=true, maxLineInvocationPerTest=250, timeoutMethodInvocation=2000, dataCollectionTimeoutInSecondForSynthesis=900, addWeight=0.19478, subWeight=0.04554, mulWeight=0.0102, divWeight=0.00613, andWeight=0.10597, orWeight=0.05708, eqWeight=0.22798, nEqWeight=0.0, lessEqWeight=0.0255, lessWeight=0.0947, methodCallWeight=0.1, fieldAccessWeight=0.08099, constantWeight=0.14232, variableWeight=0.05195, mode=REPAIR, type=PRE_THEN_COND, synthesis=DYNAMOTH, oracle=ANGELIC, solver=Z3, solverPath='/nopol/nopol/lib/z3/z3_for_linux', projectSources=[/apiarty/data/MATH-1089/commons-math/src/main/java, /apiarty/data/MATH-1089/commons-math/src/test/java], projectClasspath='[Ljava.net.URL;@3c5a99da', projectTests=[org.apache.commons.math3.util.PrecisionTest], complianceLevel=7, outputFolder=., json=false}
03:33:56.288 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Available processors (cores): 2
03:33:56.320 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Free memory: 50 MB
03:33:56.321 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Maximum memory: 3 GB
03:33:56.322 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Total memory available to JVM: 59 MB
03:33:56.323 [main] INFO  fr.inria.lille.repair.nopol.NoPol - Java version: 1.8.0_232
03:33:56.325 [main] INFO  fr.inria.lille.repair.nopol.NoPol - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
03:33:56.326 [main] INFO  fr.inria.lille.repair.nopol.NoPol - PATH: /apiarty/apiarty.bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
03:36:39.583 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - statement #1
03:36:39.591 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - Analysing SourceLocation org.apache.commons.math3.util.Precision:403 which is executed by 1 tests
627790943
03:36:58.265 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - looking with class fr.inria.lille.repair.nopol.spoon.smt.ConditionalAdder
03:37:24.288 [pool-2-thread-1] ERROR x.java.compiler.DynamicClassCompiler - [Compilation errors]
Precision.java:140: error: missing return statement
    }
    ^
03:37:24.298 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - statement #2
03:37:24.299 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - Analysing SourceLocation org.apache.commons.math3.util.Precision:401 which is executed by 1 tests
627790943
03:37:44.717 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - looking with class fr.inria.lille.repair.nopol.spoon.smt.ConditionalAdder
03:38:04.012 [pool-4-thread-1] ERROR x.java.compiler.DynamicClassCompiler - [Compilation errors]
Precision.java:140: error: missing return statement
    }
    ^
03:38:04.024 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - statement #3
03:38:04.026 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - Analysing SourceLocation org.apache.commons.math3.util.Precision:400 which is executed by 1 tests
627790943
03:38:23.859 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - looking with class fr.inria.lille.repair.nopol.spoon.smt.ConditionalAdder
03:38:41.240 [pool-6-thread-1] ERROR x.java.compiler.DynamicClassCompiler - [Compilation errors]
Precision.java:138: error: missing return statement
    }
    ^
03:38:41.254 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - looking with class fr.inria.lille.repair.nopol.spoon.smt.ConditionalReplacer
03:39:00.151 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - statement #4
03:39:00.156 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - Analysing SourceLocation org.apache.commons.math3.util.Precision:399 which is executed by 1 tests
627790943
03:39:19.981 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - statement #5
03:39:19.984 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - Analysing SourceLocation org.apache.commons.math3.util.Precision:398 which is executed by 1 tests
627790943
03:39:39.450 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - statement #6
03:39:39.452 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - Analysing SourceLocation org.apache.commons.math3.util.Precision:397 which is executed by 1 tests
627790943
03:39:58.738 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - statement #7
03:39:58.740 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - Analysing SourceLocation org.apache.commons.math3.util.Precision:396 which is executed by 1 tests
627790943
03:40:18.564 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - statement #8
03:40:18.566 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - Analysing SourceLocation org.apache.commons.math3.util.Precision:395 which is executed by 1 tests
627790943
03:40:40.006 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - statement #9
03:40:40.014 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - Analysing SourceLocation org.apache.commons.math3.util.Precision:373 which is executed by 1 tests
627790943
03:41:02.845 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - statement #10
03:41:02.846 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - Analysing SourceLocation org.apache.commons.math3.TestUtils:56 which is executed by 2 tests
814614304
03:41:22.155 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - statement #11
03:41:22.157 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - Analysing SourceLocation org.apache.commons.math3.TestUtils:55 which is executed by 2 tests
814614304
03:41:40.219 [pool-1-thread-1] DEBUG fr.inria.lille.repair.nopol.NoPol - looking with class fr.inria.lille.repair.nopol.spoon.smt.ConditionalAdder
03:42:03.433 [pool-1-thread-1] INFO  fr.inria.lille.repair.nopol.NoPol - ----INFORMATION----
03:42:05.231 [pool-1-thread-1] INFO  fr.inria.lille.repair.nopol.NoPol - Nb classes : 1323
03:42:05.234 [pool-1-thread-1] INFO  fr.inria.lille.repair.nopol.NoPol - Nb methods : 10340
03:42:05.235 [pool-1-thread-1] INFO  fr.inria.lille.repair.nopol.NoPol - Nb Statements Analyzed : 5
03:42:05.236 [pool-1-thread-1] INFO  fr.inria.lille.repair.nopol.NoPol - Nb Statements with Angelic Value Found : 0
03:42:05.238 [pool-1-thread-1] INFO  fr.inria.lille.repair.nopol.NoPol - NoPol Execution time : 487175ms
03:42:05.255 [pool-1-thread-1] INFO  fr.inria.lille.repair.nopol.NoPol - 
NO_ANGELIC_VALUE
